# TexPainter3D

./: CMakeLists.txt  README.md  main.cpp  mait.qml
.github/workflows/: build.yml
